# game_virus101

./: .bumpversion.cfg  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  README.rst  pyproject.toml  tasks.py
.github/: ISSUE_TEMPLATE.md
docs/: conf.py  index.rst  installation.rst  usage.rst
tests/: __init__.py  test_virus101.py
virus101/: __init__.py  blackscreen.py  cli.py  communication.py  config.py  filehandler.py  gui.py  startup.py  story.py  utils.py  virus.py  virus101.py
