[tool]
[tool.poetry]
name = "virus101"
version = "0.1.0"
homepage = "https://github.com/dummman/virus101"
description = "Top-level package for virus101."
authors = ["Daniel Senftleben <danprem@ymail.com>"]
readme = "README.rst"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
packages = [
    { include = "virus101" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">3.8, <=3.10"
click = "^8.0.3"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
yapf = "^0.32.0"
tox = "^3.24.5"
bumpversion = "^0.6.0"
coverage = "^6.2"
flake8 = "^4.0.1"
invoke = "^1.6.0"
isort = "^5.10.1"
pylint = "^2.12.2"
pytest = "^6.2.5"
Sphinx = "^4.4.0"
black = "^21.12b0"

[tool.poetry.scripts]
virus101 = 'virus101.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
